fix layout problem of hidden activity

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,8 @@ video {
   display: block;
   position: absolute;
   visibility: hidden;
+  left: 0;
+  top: 0;
 }
 
 .radar {
